# Lexer-experiment

./: CMakeLists.txt  Notes.txt  README.md
src/: CommentStringComponent.cpp  CommentStringComponent.h  Component.h  EndOfFileComponent.cpp  IdentifierComponent.cpp  IdentifierComponent.h  InputStream.cpp  InputStream.h  KeywordComponent.h  Lexer.cpp  Lexer.h  OperatorComponent.h  QuotedStringComponent.cpp  SpaceComponent.h  Token.h  main.cpp
src/Components/: CommentStringComponent.cpp  DigitComponent.cpp  KeywordComponent.cpp  OperatorComponent.cpp  SpaceComponent.cpp  UnknownComponent.cpp
src/include/: DigitComponent.h  EndOfFileComponent.h  KeywordComponent.h  KnownTokenComponent.h  QuotedStringComponent.h  Token.h  UnknownComponent.h
tests/: CMakeLists.txt  LexerTest.cpp
